# CBrowser2

./: Purrooser  README.md  meson.build
browser/: about.html  index.html
browser/core/: core.css
src/: main.cc
